[gd_scene load_steps=30 format=3 uid="uid://dy0jgfwlfo6qu"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_0a27f"]
[ext_resource type="Texture2D" uid="uid://5h1p0mj7em1o" path="res://art/Free/Main Characters/Ninja Frog/Double Jump (32x32).png" id="2_d4fg2"]
[ext_resource type="Texture2D" uid="uid://c7cid51oj0un1" path="res://art/Free/Main Characters/Ninja Frog/Run (32x32).png" id="3_rbvih"]
[ext_resource type="Texture2D" uid="uid://dvcjiawtm3mg2" path="res://art/Free/Main Characters/Appearing (96x96).png" id="4_8qbsh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_08eth"]
atlas = ExtResource("2_d4fg2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x1dn"]
atlas = ExtResource("2_d4fg2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8adw"]
atlas = ExtResource("2_d4fg2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yjkk"]
atlas = ExtResource("2_d4fg2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yntj7"]
atlas = ExtResource("2_d4fg2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o3gl"]
atlas = ExtResource("2_d4fg2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfaeh"]
atlas = ExtResource("3_rbvih")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbic8"]
atlas = ExtResource("3_rbvih")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v26w"]
atlas = ExtResource("3_rbvih")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_38am6"]
atlas = ExtResource("3_rbvih")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_55uog"]
atlas = ExtResource("3_rbvih")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo31w"]
atlas = ExtResource("3_rbvih")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35np7"]
atlas = ExtResource("3_rbvih")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjnsb"]
atlas = ExtResource("3_rbvih")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_euf1r"]
atlas = ExtResource("3_rbvih")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbm6u"]
atlas = ExtResource("3_rbvih")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_63tte"]
atlas = ExtResource("3_rbvih")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pec5w"]
atlas = ExtResource("3_rbvih")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_q2d0k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_08eth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x1dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8adw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yjkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yntj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o3gl")
}],
"loop": true,
"name": &"jump",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfaeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbic8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v26w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38am6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55uog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo31w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35np7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjnsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euf1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbm6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63tte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pec5w")
}],
"loop": true,
"name": &"run",
"speed": 25.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2acu3"]
size = Vector2(119, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_akx7b"]
atlas = ExtResource("4_8qbsh")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a48n3"]
atlas = ExtResource("4_8qbsh")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajosp"]
atlas = ExtResource("4_8qbsh")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dclow"]
atlas = ExtResource("4_8qbsh")
region = Rect2(0, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_nd6ol"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_akx7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a48n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajosp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dclow")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 8.0
}]

[node name="Player" type="CharacterBody2D" groups=["player_group"]]
script = ExtResource("1_0a27f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_q2d0k")
animation = &"jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_2acu3")

[node name="DeathAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nd6ol")
animation = &"death"
frame = 4
frame_progress = 1.0

[node name="TimerBullet" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="TimerBullet" to="." method="_on_timer_bullet_timeout"]
